--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -128,12 +128,32 @@
 }
 
 @Article{wang:cbir_using_daubechies_wavelets,
-    author = "Wang, J. Z. and Wiederhold, G. and Firschein, O. and Wei, S. X.",
-    title = "Content-Based Image Indexing and Searching Using Daubechies' Wavelets",
-    journal = "International Journal on Digital Libraries",
+    author = {Wang, J. Z. and Wiederhold, G. and Firschein, O. and Wei, S. X.},
+    title = {Content-Based Image Indexing and Searching Using Daubechies' Wavelets},
+    journal = {International Journal on Digital Libraries},
     volume = {1},
     number = {4},
     pages = {311--328},
     year = 1997,
 }
 
+@Article{ohta:color_info_for_region_segm,
+   author = {Ohta, Y. and Kanade, T. and Sakai, T.},
+   title = {Color Information for Region Segmentation},
+   journal = {Computer Graphics and Image Processing},
+   month = jul,
+   year = 1980,
+   volume = {13},
+   number = {3},
+   pages = {222--241},
+}
+
+@Inproceedings{tkalcic:colour_spaces,
+   author = {Tkalcic, M. and Tasic, J. F.},
+   title = {Colour spaces: perceptual, historical and applicational background},
+   Year = 2003,
+	Booktitle = {Eurocon 2003 Proceedings},
+	Editor = {Zajc, B. and Tkalcic, M.},
+	Month = sep,
+	Organization = {IEEE Region 8},
+}
